--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Lívia Lash Designer - Especialista em Extensão de Cílios em Brasília-DF</title>
+    <title>Lívia Lash Designer - Especialista em Extensão de Cílios</title>
     <meta name="description" content="Eleve seu olhar com uma especialista em extensão de cílios fio a fio em Brasília-DF. Qualidade, detalhe e um resultado cativante. Agende sua avaliação!">
     <link rel="icon" href="assets/images/favicon.png" type="image/png">
 
